# rules_go_swagger

./: BUILD.bazel  README.md  WORKSPACE
example/: BUILD.bazel  main.go
go/swagger/: BUILD.bazel  def.bzl
go/swagger/private/: BUILD.bazel  go_swagger_deps.bzl  go_swagger_repository.bzl  repositories.bzl
