load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

filegroup(
  name = "swagger.json",
  srcs = ["swagger.json"],
)

go_binary(
    name = "example",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    visibility = ["//visibility:private"],
    deps = [
      "@petstore//models:go_default_library",
      "@petstore//client:go_default_library",
    ],
)